<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/report_container"

    tools:context=".ui.report.ReportFragment">

    <LinearLayout
        android:id="@+id/report_top"
        android:background="@drawable/report_top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Report a disaster"
            android:layout_marginStart="8dp"
            android:textSize="28dp"
            android:textColor="@color/white"
            android:fontFamily="@font/alibaba_extrabold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="this report will be sibmuit to Garda"
            android:layout_marginStart="8dp"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/alibaba_light"
            />
    </LinearLayout>




    <LinearLayout
        android:id="@+id/report_type"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_where">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/alibaba_extrabold"
            android:text="Type:"
            android:textColor="@color/black"
            android:textSize="20dp" />
        <RadioGroup
            android:id="@+id/report_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="1dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/report_fire"
                android:layout_width="65dp"
                android:layout_height="45dp"
                android:text="Fire"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/report_fire"/>
            <RadioButton
                android:id="@+id/report_water"
                android:layout_width="75dp"
                android:layout_height="45dp"
                android:text="Water"

                />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/report_water"/>
            <RadioButton
                android:id="@+id/report_otherevent"
                android:layout_width="75dp"
                android:layout_height="45dp"
                android:text="Other"

                />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/report_other"/>
        </RadioGroup>

        <!--        <ImageView-->
        <!--            android:id="@+id/report_pulldown_icon"-->
        <!--            android:layout_width="40dp"-->
        <!--            android:layout_height="40dp"-->
...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/alibaba_extrabold"
            android:text="Where is the disaster:"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/alibaba_light"
            android:text="mark from the map"
            android:textColor="@color/black"
            android:textSize="10dp" />

        <ImageView
            android:id="@+id/report_mark_map_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/report_mark_map"
            android:scaleType="fitXY"
...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/alibaba_extrabold"
            android:text="How many people injured:"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/report_injured"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            android:hint="    default 0"
...
            android:layout_marginTop="2dp"
            android:fontFamily="@font/alibaba_extrabold"
            android:text="Updated information"
            android:textColor="@color/black"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/report_otherinfo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            android:textSize="16dp"
...
            />


    </LinearLayout>
    <LinearLayout
        android:background="#ffffff"
        android:id="@+id/report_btn"
        android:layout_width="365dp"
        android:layout_height="150dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_other">
        <ImageView
            android:id="@+id/report_cancel"
            android:layout_width="107dp"
            android:layout_height="43dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="50dp"

            android:background="@drawable/report_cancel"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/report_submit"
            android:layout_width="107dp"
            android:layout_height="43dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="50dp"

            android:background="@drawable/report_submit"
...
