<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/popup_window_bg"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">


    <ImageView
        android:id="@+id/disaster_logo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="13dp"
        android:scaleType="fitXY" />


    <TextView
        android:id="@+id/tv_pop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        android:text="Task"
        android:textColor="@color/black"
        android:layout_toRightOf="@+id/disaster_logo" />

    <ImageButton
        android:id="@+id/close_btn1"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/closebutton"
        android:layout_alignParentRight="true"/>


    <View
        android:id="@+id/divide_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tv_pop_name"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:background="@color/grey_define" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:fillViewport="false"
        android:id="@+id/taskScrollView"
        android:layout_below="@+id/divide_line"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/taskrelativeLayout">

            <TextView
                android:id="@+id/type_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:text="Type:"
                android:textSize="15sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/type_details"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="3dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_toRightOf="@+id/type_intro" />

            <TextView
                android:id="@+id/location_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:text="Location:"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/type_intro"/>

            <TextView
                android:id="@+id/location_details"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="3dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_toRightOf="@+id/location_intro"
                android:layout_below="@+id/type_intro"/>

            <TextView
                android:id="@+id/ftime_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location_intro"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:text="First report time:"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ftime_details"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="3dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_toRightOf="@+id/ftime_intro"
                android:layout_below="@+id/location_intro"/>

            <TextView
                android:id="@+id/injury_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ftime_intro"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:text="Injury:"
                android:textSize="15sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/injury_details"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_below="@+id/ftime_intro"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="3dp"
                android:textSize="15sp"
                android:layout_toRightOf="@+id/injury_intro"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/task_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:text="Task:"
                android:textColor="@color/black"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"
                android:layout_below="@+id/injury_intro"/>

            <TextView
                android:id="@+id/task_details"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_below="@+id/injury_intro"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="3dp"
                android:textSize="15sp"
                android:layout_toRightOf="@+id/injury_intro"
                android:textColor="@color/black" />


            <ImageView
                android:id="@+id/task_complete"
                android:layout_width="72dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="140dp"
                android:background="@drawable/task_complete"
                android:scaleType="fitXY"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/task_direction"
                android:layout_width="72dp"
                android:layout_height="30dp"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="140dp"
                android:background="@drawable/direction"
                android:scaleType="fitXY"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>










    </ScrollView>


</RelativeLayout>