...
        <Button
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1.0" />
        <TextView
            android:id="@+id/account_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/alibaba_regular"
            android:textAlignment="center"
...
            android:background="@drawable/personal_info_icon"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/account_login_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/account_mid_icon"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/account_mid_icon"
...
            android:text="Name:"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/account_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account_mid_icon"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
...
            android:text="E-mail:"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/account_email_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account_name_info"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
...
            android:text="Mobile:"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/account_mobile_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account_email_info"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
...
